# haystack-pydantic

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint_and_test.yml
haystack_pydantic/: __init__.py
haystack_pydantic/core/component/: __init__.py  component.py
haystack_pydantic/core/pipeline/: pipeline.py
tests/: test_integration.py
