[project]
name = "haystack-pydantic"
version = "0.1.0"
description = "Define haystack components with pydantic models"
authors = [
    {name = "Satoshi",email = "6world4trigger@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "haystack-ai (>=2.9.0,<3.0.0)",
    "pydantic (>=2.10.5,<3.0.0)"
]
packages = [
    {include = "haystack_pydantic"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.4"
ruff = "^0.9.2"
mypy = "^1.14.1"

[tool.mypy]
plugins = ['pydantic.mypy']
follow_untyped_imports = true
